[workspace]

members = ["arb-bot", "custom-sui-sdk", "librarian"]

[workspace.dependencies]

anyhow = "1.0.71"
async-trait = "0.1.61"
bcs = "0.1.4"
clap = { version = "3.2.17", features = ["derive"] }
crossbeam = "0.8.2"
dyn-clone = "1.0.11"
ethnum = "1.3.2"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c961a01596a87e76f590c7e43aca9d57106dbbb1" }
jsonrpsee = { git="https://github.com/wlmyng/jsonrpsee.git", rev= "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = ["full", "http-client", "jsonrpsee-core"] }
fixed = "1.23.1"
futures = "0.3.25"
futures-core = "0.3.21"
governor = "0.6.0"
indexmap = "1.9.3"
itertools = "0.10.5"
move-core-types = { git = "https://github.com/MystenLabs/sui" }
move-binary-format = { git = "https://github.com/MystenLabs/sui" }
nonzero_ext = "0.1.0"
page-turner = "0.8.2"
petgraph = "0.6.3"
rayon = "1.7.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_with = { version = "2.1.0", features = ["hex"] }
serde_json = { version = "1.0.95", features = ["preserve_order", "arbitrary_precision"] }
shared-crypto = { git = "https://github.com/MystenLabs/sui" }
sui-keys = { git = "https://github.com/MystenLabs/sui" }
sui-json = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui" }
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui" }
sui-types = { git = "https://github.com/MystenLabs/sui" }
thiserror = "1.0.40"
tokio = "1.28.1"