[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
custom-sui-sdk = { path = "../custom-sui-sdk" }
tokio = "1.28.0"
futures = "0.3.23"
anyhow = "1.0.71"
async-trait = "0.1.61"