[package]
name = "custom-sui-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui" }
sui-types = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui" }
move-core-types = { git = "https://github.com/MystenLabs/sui" }
tokio = "1.28.0"
anyhow = "1.0.71"
jsonrpsee = { version = "0.16.2", features = ["http-client"] }
async-trait = "0.1.61"
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_with = { version = "2.1.0", features = ["hex"] }
serde_json = "1.0.88"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "27ee552d5c1feb02b6b64b4f77be3c84e82a0469" }
thiserror = "1.0.37"
bcs = "0.1.4"
futures-core = "0.3.28"
page-turner = "0.8.2"
governor = "0.6.0"