[package]
name = "custom-sui-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
jsonrpsee.workspace = true
futures.workspace = true
futures-core.workspace = true
governor.workspace = true
move-core-types.workspace = true
move-binary-format.workspace = true
page-turner.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
sui-json.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-types.workspace = true
sui-protocol-config.workspace = true
sui-transaction-builder.workspace = true
sui-types.workspace = true
thiserror.workspace = true
tokio.workspace = true